--- a/views/site/reset.ejs
+++ b/views/site/reset.ejs
@@ -8,24 +8,24 @@
         <div class="row">
 
           <div class="col-sm-3">
-            <form action="/books/nuke" method="GET">
+            <form action="/api/books/nuke" method="GET">
               <button class="btn btn-lg btn-default"><i class="fa fa-refresh"></i> Reset Books</button>
             </form>
           </div>
 
           <div class="col-sm-3">
-            <form action="/wines/nuke" method="GET">
+            <form action="/api/wines/nuke" method="GET">
               <button class="btn btn-lg btn-default"><i class="fa fa-refresh"></i> Reset Wines</button>
             </form>
           </div>
 
           <div class="col-sm-3">
-            <form action="/todos/nuke" method="GET">
+            <form action="/api/todos/nuke" method="GET">
               <button class="btn btn-lg btn-default"><i class="fa fa-refresh"></i> Reset Todos</button>
             </form>
           </div>
           <div class="col-sm-3">
-            <form action="/pokemon/nuke" method="GET">
+            <form action="/api/pokemon/nuke" method="GET">
               <button class="btn btn-lg btn-default"><i class="fa fa-refresh"></i> Reset Pokemon</button>
             </form>
           </div>
